--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jquery": "^3.6.0",
     "mapbox-gl": "^2.2.0",
     "node": "^16.1.0",
+    "places.js": "^1.19.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
