--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.0",
     "bootstrap": "4.6",
+    "flatpickr": "^4.6.9",
     "jquery": "^3.6.0",
     "mapbox-gl": "^2.2.0",
     "node": "^16.1.0",
