--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node": "^16.1.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
+    "typed.js": "^2.0.12",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
